Fatal drive failure. Some code recovered through reverse engineering. Error diffusion dithering.

--- a/Luna/Luna/App.config
+++ b/Luna/Luna/App.config
@@ -40,6 +40,12 @@
             <setting name="Gamma" serializeAs="String">
                 <value>2.4</value>
             </setting>
+            <setting name="TopPosition" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="BottomPosition" serializeAs="String">
+                <value>0.8</value>
+            </setting>
         </Luna.Properties.Settings>
     </userSettings>
 </configuration>
