--- a/Luna/Luna/Properties/Settings.settings
+++ b/Luna/Luna/Properties/Settings.settings
@@ -35,5 +35,11 @@
     <Setting Name="Scripts" Type="System.Collections.Specialized.StringCollection" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="TopPosition" Type="System.Single" Scope="User">
+      <Value Profile="(Default)">0</Value>
+    </Setting>
+    <Setting Name="BottomPosition" Type="System.Single" Scope="User">
+      <Value Profile="(Default)">0.8</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
