--- a/Luna/Luna/packages.config
+++ b/Luna/Luna/packages.config
@@ -1,10 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="SharpDX" version="3.0.2" targetFramework="net46" />
-  <package id="SharpDX.D3DCompiler" version="3.0.2" targetFramework="net46" />
-  <package id="SharpDX.Desktop" version="3.0.2" targetFramework="net46" />
-  <package id="SharpDX.Direct3D11" version="3.0.2" targetFramework="net46" />
-  <package id="SharpDX.DXGI" version="3.0.2" targetFramework="net46" />
-  <package id="SharpDX.Mathematics" version="3.0.2" targetFramework="net46" />
-  <package id="SharpDX.MediaFoundation" version="3.0.2" targetFramework="net46" />
+  <package id="NAudio" version="1.7.3" targetFramework="net46" />
+  <package id="SharpDX" version="3.1.1" targetFramework="net46" />
+  <package id="SharpDX.D3DCompiler" version="3.1.1" targetFramework="net46" />
+  <package id="SharpDX.Desktop" version="3.1.1" targetFramework="net46" />
+  <package id="SharpDX.Direct3D11" version="3.1.1" targetFramework="net46" />
+  <package id="SharpDX.DXGI" version="3.1.1" targetFramework="net46" />
+  <package id="SharpDX.Mathematics" version="3.1.1" targetFramework="net46" />
 </packages>
