--- a/Luna/Luna/Luna.csproj
+++ b/Luna/Luna/Luna.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{1BB09278-8BD7-4F7D-8FB4-F69D54FF31B3}</ProjectGuid>
-    <OutputType>WinExe</OutputType>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Luna</RootNamespace>
     <AssemblyName>Luna</AssemblyName>
@@ -25,7 +25,7 @@
     <UpdateRequired>false</UpdateRequired>
     <MapFileExtensions>true</MapFileExtensions>
     <AutorunEnabled>true</AutorunEnabled>
-    <ApplicationRevision>8</ApplicationRevision>
+    <ApplicationRevision>11</ApplicationRevision>
     <ApplicationVersion>1.1.0.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <PublishWizardCompleted>true</PublishWizardCompleted>
@@ -118,9 +118,11 @@
   <ItemGroup>
     <Compile Include="Audio\AudioCapture.cs" />
     <Compile Include="Audio\BeatDetector.cs" />
+    <Compile Include="Audio\MelAggregator.cs" />
     <Compile Include="Audio\RainbowPerOctave.cs" />
     <Compile Include="Audio\ToneAggregator.cs" />
     <Compile Include="Audio\FFTProcessor.cs" />
+    <Compile Include="Audio\NeuralBeatDetector.cs" />
     <Compile Include="Utility\CircularBuffer.cs" />
     <Compile Include="Utility\ColorSpace.cs" />
     <Compile Include="Controls\SpectrumVisualizerControl.cs">
@@ -155,6 +157,7 @@
     <Compile Include="LunaConnectionBase.cs" />
     <Compile Include="LunaUdp.cs" />
     <Compile Include="Audio\HoldFilter.cs" />
+    <Compile Include="Utility\MovingMedian.cs" />
     <Compile Include="Utility\MovingMin.cs" />
     <Compile Include="Utility\Perlin3D.cs" />
     <Compile Include="Scripts\FlameScript.cs" />
@@ -197,6 +200,9 @@
     <EmbeddedResource Include="Forms\SessionForm.resx">
       <DependentUpon>SessionForm.cs</DependentUpon>
     </EmbeddedResource>
+    <None Include="models\graph.pb">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Include="packages.config" />
     <None Include="Properties\app.manifest" />
     <None Include="Properties\Settings.settings">
@@ -220,6 +226,9 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Icon1.ico" />
+    <Content Include="tf_beat_detector.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.5.2">
